# GeoSharPlus

./: .gitignore  CMakeLists.txt  GSP.DEMO.sln  GeoBridgeDemoGH.sln  LICENSE  README.md  UPSTREAM_FILES.md  vcpkg.json
.github/: GSP_logo.ai  README.md
.github/workflows/: ci.yml
GSPdemoConsole/: GSPdemoConsole.csproj  GSPdemoConsole.csproj.Backup.tmp  GSPdemoConsoleCS.csproj  Program.cs  prebuild.ps1
GSPdemoConsole/Properties/: launchSettings.json
GSPdemoGH/: GSPdemoGH.csproj  GSPdemoGHComponent.cs  GSPdemoGHInfo.cs  postbuild.ps1
GeoBridgeCPP/: CMakeLists.txt
GeoBridgeCPP/include/GeoBridgeCPP/API/: BridgeAPI.h
GeoBridgeCPP/include/GeoBridgeCPP/Core/: Geometry.h  MathTypes.h
GeoBridgeCPP/include/GeoBridgeCPP/Serialization/: GeoSerializer.h
GeoBridgeCPP/include/GeoBridgeRHGH/API/: BridgeAPI.h
GeoBridgeCPP/include/GeoBridgeRHGH/Core/: MathTypes.h
GeoBridgeCPP/schema/: geometry.fbs
GeoBridgeCPP/src/API/: BridgeAPI.cpp
GeoBridgeCPP/src/Core/: Geometry.cpp
GeoBridgeCPP/src/Serialization/: GeoSerializer.cpp
GeoBridgeDemoGH/: GeoBridgeDemoGH.csproj  GeoBridgeDemoGHComponent.cs  GeoBridgeDemoGHInfo.cs  prebuild.ps1
GeoBridgeDemoGH/Properties/: launchSettings.json
GeoBridgeNET/: GeoBridgeNET.csproj  GeoMarshal.cs  GeometryMarshal.cs  NativeBridge.cs
GeoSharPlusCPP/: CMakeLists.txt
GeoSharPlusCPP/include/GeoSharPlusCPP/API/: BridgeAPI.h
GeoSharPlusCPP/include/GeoSharPlusCPP/Core/: Macro.h  MathTypes.h
GeoSharPlusCPP/include/GeoSharPlusCPP/Extensions/: ExampleExtensions.h
GeoSharPlusCPP/include/GeoSharPlusCPP/Serialization/: GeoSerializer.h
GeoSharPlusCPP/schema/: base.fbs  geometry.fbs  mesh.fbs
GeoSharPlusCPP/src/API/: BridgeAPI.cpp
GeoSharPlusCPP/src/Extensions/: ExampleExtensions.cpp
GeoSharPlusCPP/src/Serialization/: GeoSerializer.cpp
GeoSharPlusNET/: GeoMarshal.cs  GeoSharPlusNET.csproj  NativeBridge.cs  RuntimeInit.cs  Wrapper.cs
GeoSharPlusNET.Tests/: GeoSharPlusNET.Tests.csproj  README.md
GeoSharPlusNET.Tests/Core/: MarshalHelperTests.cs  PlatformTests.cs  SerializerTests.cs
GeoSharPlusNET.Tests/Geometry/: MeshTests.cs  Vec2Tests.cs  Vec3Tests.cs
GeoSharPlusNET/Extensions/: ExampleExtensions.cs
gbCPP/include/GeoBridgeRHGH/Core/: Geometry.h
gbCPP/schemas/: geometry.fbs
gbCPP/src/Serialization/: GeoSerializer.cpp
scripts/: sync-upstream.ps1
test_file/: GSPdemoGH_demoTest.gh
